[package]
name = "generic-rcsp"
description = "A rust library for solving the resource constrained shortest path problem using a dynamic programming labeling algorithm. Was developed for solving pricing problems for branch-and-price."
repository = "https://github.com/gregod/GenericRCSP"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
typed-arena = "2.0.2"
itertools = "0.12.0"
binary-heap-plus = "0.5.0"
